# ai-trading-assistant

./: .env.example  .gitignore  CLAUDE.md  PHASE3_REVIEW_SUMMARY.md  README.md  conv.txt  pyproject.toml  requirements-dev.txt  requirements.txt
agents/: AGENT_PROTOCOL.md  SUPERVISOR_DECISION_phase1.md  SUPERVISOR_DECISION_phase3.md
agents/developer/: SOP.md
agents/executor/: EXECUTION_SUMMARY.md  QUICK_RESULTS.txt  execution_log.md  run_phase1_baseline.py  run_phase3_rs_relaxation.py  status.md
backtest/: backtest_framework.py  backtest_framework_v2.py  backtest_results_analysis.ipynb  comprehensive_analysis.py  generate_charts.py  generate_sample_charts.py  generate_v4_sample_charts.py  regenerate_entry_charts.py  run_backtest.py  run_backtest_dual_alert.py  run_backtest_entry_comparison.py  run_backtest_entry_timing.py  run_backtest_v2.py  run_backtest_v3.py  run_backtest_v4.py  strategy_backtest.ipynb  strategy_params.py  strategy_research_paper.md  vcp_detector.py  vcp_detector_v4.py  vcp_detector_v5.py  visualize_trades.py  visualize_trades_enhanced.py  visualize_vcp_review.py
docs/: 01-business-requirements.md  02-system-requirements.md  03-system-design.md  04-configuration-usage-guide.md  05-installation-deployment-guide.md  06-test-strategy.md  07-test-plan.md  09-lightweight-charts-integration.md  backtest-v3-results.md  comprehensive-analysis-report.md  entry-comparison-results.md  three-stage-alert-backtest-results.md  vcp-algorithm-lessons-learned.md  vcp-implementation-research.md
script/: __init__.py  vcp_scan.py
src/: __init__.py
(+85 files in other folders)
